[package]
name = "explorer-parser-wasm"
version = "0.1.0"
authors = ["Deepsn <75620590+Deepsn@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.99"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = { version = "0.12.12", features = ["json"] }
wasm-bindgen-futures = "0.4.49"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

# Workaround for https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
