[package]
name = "explorer-parser-wasm"
version = "0.1.0"
authors = ["Deepsn <75620590+Deepsn@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.99"
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = { version = "0.12.12", features = ["json"] }
wasm-bindgen-futures = "0.4.49"
serde = { version = "1.0.217", features = ["derive"] }
rbx_binary = { path = "rbx_dom/rbx_binary" }
rbx_dom_weak = { path = "rbx_dom/rbx_dom_weak" }
getrandom = { version = "0.3.0", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

# Workaround for https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]

[profile.release]
opt-level = "s"
